# ServiceFabric-Public

./: .env.dev.example  .env.example.dev  .env.example.prod  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  SERVICE_FABRIC_TEST_REPORT.md  TESTING.md  docker-compose.agents.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fabric  install.sh  test_engine_generate.py  test_import.py  test_import2.py
.claude/agents/: architecture-specialist.md  code-reviewer.md  documentation-agent.md  feature-implementer.md  performance-analyzer.md  quant-architect.md  quanti-vite-agent.md  refactoring-expert.md  security-scanner.md  service-scaffolder.md  test-writer.md  type-lint-checker.md
.github/: pull_request_template.md
.github/workflows/: refactoring-ci.yml
.servicefabric/: workspace.json
1_proxy/: Dockerfile  READ_ME.txt  config.yml  nginx.conf  text.md
1_proxy/conf.d/: default.conf  read_me.txt
2_backend_api/: Dockerfile  entrypoint 2.sh  entrypoint.sh  requirements.txt
2_backend_api/requirements/: runtime.in
2_backend_api/service_fabric/: manage.py  seed_templates.py
3_service_templates/data_science_base/: fabric-manifest.json
3_service_templates/flask_base/: __init__.py  fabric-manifest.json  models.py  routes.py
3_service_templates/quant_vite_base/: fabric-manifest.json  routes.py  service.py  tasks.py
3_service_templates/react_base/: __init__.py  fabric-manifest.json  models.py  routes.py
3_service_templates/vite_base/: __init__.py  fabric-manifest.json  models.py  routes.py  service.py
5_core_services/fabric_watcher/: Dockerfile  watcher.py
5_core_services/fastapi_base/: Dockerfile  requirements.txt
5_core_services/flask_base/: Dockerfile  reload_app.sh  requirements.txt  run.py
5_core_services/react_base/: Dockerfile  builder.js  package-lock.json  package.json  server.js  vite.config.ts
5_core_services/vite_base/: Dockerfile  build_single.js  builder.js  package-lock.json  package.json  server.js  vite.config.ts
9_component_lab/: index.html  package-lock.json  package.json  vite.config.ts
9_component_lab/src/: App.tsx  index.css  main.tsx  registry.ts
agents_sdk/: Dockerfile  agent_loader.py  config.py  requirements.txt  runner.py  scheduler.py
agents_sdk/crew/: agents.py  patterns.py
agents_sdk/tasks/: __init__.py  base.py  code_review.py  doc_sync.py  full_audit.py  performance_audit.py  security_scan.py  type_check.py
clients/python/: pyproject.toml
clients/python/servicefabric_client/: __init__.py  agent_providers.py  agentic.py  application_cli.py  application_factory.py  capabilities.py  capability_consumer.py  capability_projections.py  capability_runtime.py  capsule_cli.py  capsules.py  cli.py  config.py  connection.py  development.py  distillation.py  distillation_cli.py  factory_cli.py  governance.py  governance_cli.py  main.py  mcp.py  mcp_cli.py  provider_execution.py  static_web_server.py  wave3.py
codex/: run-milestone.sh
codex/prompts/: 01-ap-01a.md  02-ap-00.md  03-ap-01b.md  04-ap-02.md  review-current-milestone.md
config/agent/: milestones.json  milestones.schema.json
docs/: getting-started-hosted-application.md  getting-started-local.md  getting-started-workspace.md
docs/architecture/: post-c1-execution-roadmap.md  product-overview.md  specification-map.md
docs/canonical/: Building Graph Specification v1.md  Canonical ServiceFabric Tool Manifest v1.md  ServiceFabric Domain Tool Portfolio and Prioriti.md  ServiceFabric Fit-for-Purpose Assessment and Sta.md  ServiceFabric Formal Refactoring Plan for Codex.md  ServiceFabric Production Architecture  Roadmap.md  ServiceFabric Security  Identity  Authorization.md  ServiceFabric System-Evolution Graph Specificati.md  ServiceFabric System-Maintenance Graph Specifica.md  ServiceFabric Telemetry  Evaluation  and Agent-C.md  ServiceFabric Tool Capsule Runtime Framework v1.md  ServiceFabric Tool Registry  Capability Discover.md
docs/contracts/: application-module-v0.1.md  application-modules-v0.1.md  application-workspace-v0.1.md  invocation-result-v1alpha1.md  legacy-manifest-translation-v1alpha1.md  local-application-hosting-baseline.md  service-package-v1alpha1.md  tool-lifecycle-v1alpha1.md
docs/getting-started/: foundation-release.md
docs/refactoring/: debt-register.yaml  legacy-manifest-inventory.json  legacy-manifest-migration.md  programme.md  python-dependency-builds.md
docs/reference/: foundation-capabilities.md
docs/workplans/: README.md  current.md  index.json  status.json  status.schema.json
examples/: research_web_app.py
examples/research-notes/: application.yaml
examples/text-utility/: servicefabric-package.json
port/: pyproject.toml  requirements.txt
port/app/: dashboard.py
port/notebooks/: 01_data_exploration.ipynb  02_factor_research.ipynb  03_portfolio_construction.ipynb  04_results_and_reporting.ipynb  05_results_and_reporting.ipynb  06_optimization.ipynb
port/src/: backtest.py  data_loader.py  esg_api.py  factors.py  hyperopt.py  optimizer.py  pipeline.py  signals.py  universe.py  utils.py
scripts/agent/: common.py  (+16 more)
services/application_builder/: __init__.py  factory.py  preview.py  pyproject.toml  service.py
services/application_dev_supervisor/: pyproject.toml
services/application_dev_supervisor/servicefabric_application_dev_supervisor/: __init__.py  service.py
services/application_host/: pyproject.toml
services/application_host/servicefabric_application_host/: __init__.py  service.py
services/capsule_host/: __init__.py  factory.py  pyproject.toml  service.py
services/governance_operations/: pyproject.toml
services/governance_operations/src/servicefabric_governance_service/: __init__.py  factory.py  service.py
services/local_gateway/: __init__.py  main.py  pyproject.toml  server.py  service.py
services/tool_runtime/: __init__.py  pyproject.toml  service.py
tests/: fabric_integration_suite.py  test_agent_loader.py  test_anki_cards_api.py  test_anki_cards_api_v2.py  test_service_fabric_generation.py  verify_fabric.sh  verify_vector_fabric.py
(+730 files in other folders)
