[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_portfolio_platform"
version = "1.0.0"
description = "Institutional-grade Multi-Factor Portfolio Optimization System"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "yfinance",
    "plotly",
    "streamlit",
    "quantstats",
    "scikit-learn",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]