[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "servicefabric-client"
version = "0.1.0a1"
description = "Python client for canonical ServiceFabric boundaries."
requires-python = ">=3.11,<3.12"
dependencies = ["servicefabric-contracts==0.4.0a1"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["servicefabric_client*"]
