[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "servicefabric-client"
version = "0.1.0a1"
description = "Python client for canonical ServiceFabric boundaries."
requires-python = ">=3.11,<3.12"
dependencies = [
  "servicefabric-application-assembly==0.1.0a1",
  "servicefabric-application-builder==0.1.0a1",
  "servicefabric-application-dev-supervisor==0.1.0a1",
  "servicefabric-application-host==0.1.0a1",
  "servicefabric-application-model==0.1.0a1",
  "servicefabric-artifacts==0.1.0a1",
  "servicefabric-builder==0.1.0a1",
  "servicefabric-capsule-host==0.1.0a1",
  "servicefabric-capability-consumers==0.1.0a1",
  "servicefabric-capability-model==0.1.0a1",
  "servicefabric-capability-registry==0.1.0a1",
  "servicefabric-contracts==0.4.0a1",
  "servicefabric-governance==0.1.0a1",
  "servicefabric-governance-service==0.1.0a1",
  "servicefabric-mcp-gateway==0.1.0a1",
  "servicefabric-mcp-projection==0.1.0a1",
  "servicefabric-operations==0.1.0a1",
  "servicefabric-operation-model==0.1.0a1",
  "servicefabric-process-runtime==0.1.0a1",
  "servicefabric-resource-bindings==0.1.0a1",
  "servicefabric-framework-kits==0.1.0a1",
  "servicefabric-runtime==0.1.0a1",
  "servicefabric-tool-runtime-service==0.1.0a1",
  "servicefabric-workspace==0.1.0a1",
]

[project.scripts]
servicefabric = "servicefabric_client.main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["servicefabric_client*"]
