[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "servicefabric-application-dev-supervisor"
version = "0.1.0a1"
description = "Bounded local application development orchestration for ServiceFabric."
requires-python = ">=3.11,<3.12"

[tool.setuptools]
packages = ["servicefabric_application_dev_supervisor"]
