[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "servicefabric-capsule-host"
version = "0.1.0a1"
description = "Bounded local capsule-host service boundary for ServiceFabric."
requires-python = ">=3.11,<3.12"
dependencies = [
  "servicefabric-artifacts==0.1.0a1",
  "servicefabric-builder==0.1.0a1",
  "servicefabric-capsules==0.1.0a1",
  "servicefabric-contracts==0.4.0a1",
]

[tool.setuptools]
package-dir = {"servicefabric_capsule_host" = "."}
packages = ["servicefabric_capsule_host"]
