[build-system]
requires=["setuptools>=68,<76"]
build-backend="setuptools.build_meta"
[project]
name="servicefabric-governance-service"
version="0.1.0a1"
requires-python=">=3.11,<3.12"
dependencies=["servicefabric-contracts==0.4.0a1","servicefabric-governance==0.1.0a1","servicefabric-operations==0.1.0a1"]
[tool.setuptools.packages.find]
where=["src"]
