[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "servicefabric-tool-runtime-service"
version = "0.1.0a1"
description = "In-process canonical tool-runtime service boundary for ServiceFabric."
requires-python = ">=3.11,<3.12"
dependencies = [
  "servicefabric-contracts==0.4.0a1",
  "servicefabric-runtime==0.1.0a1",
]

[tool.setuptools]
package-dir = {"servicefabric_tool_runtime_service" = "."}
packages = ["servicefabric_tool_runtime_service"]
